2010-04-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13991: Content Element Media does not work with render type "HTML Embed Element" (thanks to Sascha Egerer)

2010-04-19  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14105: Install Tool: PHP Warning: implode() Invalid arguments passed in typo3\sysext\install\mod\class.tx_install.php line 8244

2010-04-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14128: Tree list cache does not recognize 'this' for 'pidInList'
	* Fixed bug #14129: Function tslib_cObj::getTreeList() inserts records with empty PK

2010-04-16  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #13630: Status Report reports "Install Tool: disabled" when it is not. (thanks to Gregor Hermens)
	* Fixed bug #13941: Deleting pages should check language permissions (thanks to Tolleiv Nietsch) 
	
2010-04-16 Francois Suter <francois@typo3.org>

	* Fixed bug #14090: In Extension Manager importExtInfo() does not sort versions correctly (thanks to Daniel Minder and Steffen Gebert)

2010-04-16  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14118: Exception handler does not produce valid (X)HTML 

2010-04-15  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14117: RuntimeException thrown within the exception handler when wrong database credentials

2010-04-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14021: Simplify the code to get nested GET Parameters with TS (thanks to Sebastian Gebhard)
	* Fixed bug #14120: Add a method to check if database is connected

2010-04-15  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0beta1

2010-04-14  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #5699: Sitemap Content Element does not honorate Workspaces

2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.

2010-04-14  Patrick Broens  <patrick@patrickbroens.nl>
