@@ -1,3 +1,7 @@
+2010-04-19  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14153: htmlAreaRTE: Some Page TSConfig may break default hotkey assignments
+
 2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Updated htmlArea RTE manual.
