@@ -1,3 +1,7 @@
+2010-04-19  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14153: htmlAreaRTE: Some Page TSConfig may break default hotkey assignments
+
 2010-04-19  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #13991: Content Element Media does not work with render type "HTML Embed Element" (thanks to Sascha Egerer)
